syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/ciricc/btc-utxo-indexer/pkg/api/grpc/UTXO";

service UTXO {
	// ListByAddress returns list of UTXO by address
	rpc ListByAddress(Address) returns (TransactionOutputs);

	// GetBlockHeight returns the number of the block last synced with in UTXO storage
	rpc GetBlockHeight(google.protobuf.Empty) returns (GetBlockHeightResponse);

	// TotalAmount returns a total amount of unspent outputs by address 
	rpc TotalAmountByAddress(Address) returns (Amount);
}

message Address {
	string base58 = 1;
}

message Amount {
	uint64 value = 1;
}

message GetBlockHeightResponse {
	int64 block_height = 1;
}

message TransactionOutputs {
	repeated TransactionOutput items = 1;
}

message TransactionOutput {
	int32 index = 1;
	string tx_id = 2;
	Amount amount = 3;
	string script_pub_key = 4;
}

